apigate/tests/ui/fail/hook_not_async.rs
#[apigate::hook]
fn hook() -> apigate::HookResult {
    Ok(())
}

fn main() {}
